[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "llamaindex_tutorial"
version = "0.0.1"
description = "A project to learn and explore LlamaIndex, focusing on understanding its features, capabilities, and applications through practical examples and tutorials."
authors = [
  { name = "Jorgedelpasado" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["llamaindex_tutorial"]
force_sort_within_sections = true
